@@ -5,7 +5,7 @@
 
 1656006487 ec4d85c49c0a22aac53619bb29b29837b0a4e84228c662f393fbd428bf1fc510081b612f704e08d1e2def7433ac9c672c80877d5ec453e9a555f11488fba6919 README.md
 1644338275 b43c487d81e49af2fb0341f2d5cf238f38a6f1ce6128f2d4c58f2dec6f019c8cf30d777ba0771a10616b2429139df2976288c7423addd55737e6efe579cf6b0e SOURCE/PGME/BUILD.BAT
-1661081975 4ca066b7cd1c36f395c4cd66cf26c9e2d43cba77b6f32d3e208f504cbd4dadf58187e66a0e3a5101cb6ae83b519045b6b91bf1bba2deb50084513c7e8c03602b SOURCE/PGME/CHANGES.TXT
+1721775460 16851f36cffcc96c61a7eb8b05c9a66edbeda060e6a6e51902af5dc949436fa106363abfd46508172af0c4c31b04275453d73ae3e7711d462ff6f38ef9df7c1a SOURCE/PGME/CHANGES.TXT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1628757450 9804d18fef39225e7b2a17139d11dc632c605a89854c438e6508f859bdc4dd448c93e145d76bebd6beb9b109ef6bfcffa66715d40f41d4f890cc673ded3322f1 SOURCE/PGME/CONTRIBUTING.md
 1642974860 5fa83e89d2759c871ffcbc9b2d3b31edb1a9d3259a61ca67f90882832c65831bd276b883675354a03e31bbaba234befafcb4bae890c57970b7faea4c7eaaa7ee SOURCE/PGME/CUSTOM/config/EFNTDSGN.CFG
@@ -110,7 +110,7 @@
 1437956760 43ae8a9986d0145c4c5d88f3f24e83e5fe154b9740af70bc54b647e106e3fd00d009ba1618530e7bddd46b4c70861dc7acd0c08f2ea66522fc40c69e443fa993 SOURCE/PGME/ETOOLS/QKEYS.PAS
 1437956760 fd1846842921f66d033aab37220f2580477f109b9e1f44e82ad3fe0bcd5e3554163cbeacdfe6f6e3638dedaa35dfe9cea727b93986edcc370a240874a4dbff0a SOURCE/PGME/ETOOLS/QNOTHING.PAS
 1629126236 c2604b19ec62c86a891996b0e9168c1ff758c3a72960d4e82c7f64e0c1d5802ebb6679cade9fa1bda5a8b72ba42a76c847193db850be0f031a3a64758dc47a3a SOURCE/PGME/ETOOLS/QRESFILE.PAS
-1629316302 ff35291d2e1d1dc8555a07d309978a6e72067b2eb8a8e8a7315631c223fc05e80f17936d42673b9ffa8648af4c75fead9a483aafa8206586d7ae07e128ec020d SOURCE/PGME/ETOOLS/QSCROLL.PAS
+1721775293 6cfeca417901b826d969ad36c853497b88caa38573aeb8a97faf5711e8a11fb94469d9ec940c7d2b4f7c71315dc04dcb7757841d4a12df2af08d7525e7ae8873 SOURCE/PGME/ETOOLS/QSCROLL.PAS
 1437956760 9fd938a712c4096e478647911a1af9aed7220e29c2adec800e7f8feb32cf14755c4b663f78cf59f1ddca0b7cede57ee48855773e7fd9149643d9889a8fcdca6a SOURCE/PGME/ETOOLS/RAW2QFNT.PAS
 1437956760 2aef1bf8e3c47802727d0f5067a26036bc90602d1b0951f58163530b80642fa13ade2710ad2f34eff1e375c727866032d9984d24314c6785fd6d371e7cac7254 SOURCE/PGME/ETOOLS/TFONTDES.INC
 1629328884 77c9390d87a7f6fed5a1fd45c16ce06f6273d56e3201de747e2b1f30d3c13d7678122af6f68f8f5cbcf2a7a1271733c9b42213578d3292f157163da88f288308 SOURCE/PGME/ETOOLS/TFONTEDI.INC
@@ -137,7 +137,7 @@
 1628934964 91702ef73bc91a61c88b09da5775ee613f6217f68e20307a4b2adced6e472bba6c134e4213c5f2b151e464130afa51ea2ebd139dceca2904a3dc8ba1bb03847b SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1628279510 14c6a0ab29ff88874dc34ca33248977c8bd7de8081d224541b90a499332944af35eff5b618fa447ab0b16b1dc7c6348afef21b73f8a4e8059c4d0bef4ea34540 SOURCE/PGME/QUICKCRT/QCRT.DEF
-1661079526 9532529edc08f34c3f01789ab27bd3b58a7f7745dbaea9fadd3799667e9af68123bac7134d485fb237963bcf7977b0ef9d7c5e1781a5c5c31e3f3172056646a9 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1721774746 0426e664712ef943f89eeb5b8f4cfc51f1a9ec1984b6db8229af654166093578ae7d9d494ef5586e46809c5fed07fb797468d7a9adcbef9700aa08de3b1c26af SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
 1628788946 c375676499bf5c9bd8fc5856ea8f2e2ee8b38db4209331f9046d6f4c7adc5fd2e5283c20911f5b0872fef52628e4a5d27c2a3dc1da9d02efa288197cfef06eca SOURCE/PGME/QUICKCRT/QDOS.PAS
 1628876051 9a72b0980c9415ec9c2273742c563c0393fc5bf0e29fd1d57ac751539b39a7f0a381d2fdc608957539a9b76e7a2a7fe2f6340fa062f9eca972f6305d8fb7a22e SOURCE/PGME/QUICKCRT/QERRORS.PAS
@@ -204,7 +204,7 @@
 1661081842 dcdbff852900ee3ddc9f8fb47a11d1fc27e28c73ceb4ddac87cc28da541622e5f9dc1d8bd7e25ea70c723b4742461a3277f1c68e2a4ba178b6864d4dffa210e8 SOURCE/PGME/VERSION.INC
 1656006487 ec4d85c49c0a22aac53619bb29b29837b0a4e84228c662f393fbd428bf1fc510081b612f704e08d1e2def7433ac9c672c80877d5ec453e9a555f11488fba6919 README.md
 1644338275 b43c487d81e49af2fb0341f2d5cf238f38a6f1ce6128f2d4c58f2dec6f019c8cf30d777ba0771a10616b2429139df2976288c7423addd55737e6efe579cf6b0e SOURCE/PGME/BUILD.BAT
-1661081975 4ca066b7cd1c36f395c4cd66cf26c9e2d43cba77b6f32d3e208f504cbd4dadf58187e66a0e3a5101cb6ae83b519045b6b91bf1bba2deb50084513c7e8c03602b SOURCE/PGME/CHANGES.TXT
+1721775460 16851f36cffcc96c61a7eb8b05c9a66edbeda060e6a6e51902af5dc949436fa106363abfd46508172af0c4c31b04275453d73ae3e7711d462ff6f38ef9df7c1a SOURCE/PGME/CHANGES.TXT
 1627934430 f8383a5edc04b6113db78cda2143e29abaab2149c8c7ebbfa7bfe68739323e256fa5f767ce6651169501471fd6982629cb86004ad4e90f16aeb206d56dd4ac1a SOURCE/PGME/CLEAN.BAT
 1628757450 9804d18fef39225e7b2a17139d11dc632c605a89854c438e6508f859bdc4dd448c93e145d76bebd6beb9b109ef6bfcffa66715d40f41d4f890cc673ded3322f1 SOURCE/PGME/CONTRIBUTING.md
 1642974860 5fa83e89d2759c871ffcbc9b2d3b31edb1a9d3259a61ca67f90882832c65831bd276b883675354a03e31bbaba234befafcb4bae890c57970b7faea4c7eaaa7ee SOURCE/PGME/CUSTOM/config/EFNTDSGN.CFG
@@ -309,7 +309,7 @@
 1437956760 43ae8a9986d0145c4c5d88f3f24e83e5fe154b9740af70bc54b647e106e3fd00d009ba1618530e7bddd46b4c70861dc7acd0c08f2ea66522fc40c69e443fa993 SOURCE/PGME/ETOOLS/QKEYS.PAS
 1437956760 fd1846842921f66d033aab37220f2580477f109b9e1f44e82ad3fe0bcd5e3554163cbeacdfe6f6e3638dedaa35dfe9cea727b93986edcc370a240874a4dbff0a SOURCE/PGME/ETOOLS/QNOTHING.PAS
 1629126236 c2604b19ec62c86a891996b0e9168c1ff758c3a72960d4e82c7f64e0c1d5802ebb6679cade9fa1bda5a8b72ba42a76c847193db850be0f031a3a64758dc47a3a SOURCE/PGME/ETOOLS/QRESFILE.PAS
-1629316302 ff35291d2e1d1dc8555a07d309978a6e72067b2eb8a8e8a7315631c223fc05e80f17936d42673b9ffa8648af4c75fead9a483aafa8206586d7ae07e128ec020d SOURCE/PGME/ETOOLS/QSCROLL.PAS
+1721775293 6cfeca417901b826d969ad36c853497b88caa38573aeb8a97faf5711e8a11fb94469d9ec940c7d2b4f7c71315dc04dcb7757841d4a12df2af08d7525e7ae8873 SOURCE/PGME/ETOOLS/QSCROLL.PAS
 1437956760 9fd938a712c4096e478647911a1af9aed7220e29c2adec800e7f8feb32cf14755c4b663f78cf59f1ddca0b7cede57ee48855773e7fd9149643d9889a8fcdca6a SOURCE/PGME/ETOOLS/RAW2QFNT.PAS
 1437956760 2aef1bf8e3c47802727d0f5067a26036bc90602d1b0951f58163530b80642fa13ade2710ad2f34eff1e375c727866032d9984d24314c6785fd6d371e7cac7254 SOURCE/PGME/ETOOLS/TFONTDES.INC
 1629328884 77c9390d87a7f6fed5a1fd45c16ce06f6273d56e3201de747e2b1f30d3c13d7678122af6f68f8f5cbcf2a7a1271733c9b42213578d3292f157163da88f288308 SOURCE/PGME/ETOOLS/TFONTEDI.INC
@@ -336,7 +336,7 @@
 1628934964 91702ef73bc91a61c88b09da5775ee613f6217f68e20307a4b2adced6e472bba6c134e4213c5f2b151e464130afa51ea2ebd139dceca2904a3dc8ba1bb03847b SOURCE/PGME/QUICKCRT/QCLASS.PAS
 1437956760 77d813295df65810ac783463cde4ebeacdd8ffa68e6745978598c911d7918e56f4188dc95371c955aca3f36f410fc41d8ece1d05edcc58eb7029d911d962a664 SOURCE/PGME/QUICKCRT/QCONTROL.PAS
 1628279510 14c6a0ab29ff88874dc34ca33248977c8bd7de8081d224541b90a499332944af35eff5b618fa447ab0b16b1dc7c6348afef21b73f8a4e8059c4d0bef4ea34540 SOURCE/PGME/QUICKCRT/QCRT.DEF
-1661079526 9532529edc08f34c3f01789ab27bd3b58a7f7745dbaea9fadd3799667e9af68123bac7134d485fb237963bcf7977b0ef9d7c5e1781a5c5c31e3f3172056646a9 SOURCE/PGME/QUICKCRT/QCRT.PAS
+1721774746 0426e664712ef943f89eeb5b8f4cfc51f1a9ec1984b6db8229af654166093578ae7d9d494ef5586e46809c5fed07fb797468d7a9adcbef9700aa08de3b1c26af SOURCE/PGME/QUICKCRT/QCRT.PAS
 1437956760 79759bf3b761254d7cac4f6d5154a4bff26c0b17f8d4a0037d924039724c5b756e2822072446058ddd829c56dcb4717c26c4b46bd800c803c215965770657e9f SOURCE/PGME/QUICKCRT/QDIRCNTL.PAS
 1628788946 c375676499bf5c9bd8fc5856ea8f2e2ee8b38db4209331f9046d6f4c7adc5fd2e5283c20911f5b0872fef52628e4a5d27c2a3dc1da9d02efa288197cfef06eca SOURCE/PGME/QUICKCRT/QDOS.PAS
 1628876051 9a72b0980c9415ec9c2273742c563c0393fc5bf0e29fd1d57ac751539b39a7f0a381d2fdc608957539a9b76e7a2a7fe2f6340fa062f9eca972f6305d8fb7a22e SOURCE/PGME/QUICKCRT/QERRORS.PAS
