@@ -2,6 +2,12 @@
 
 Next Release
 
+    Added auto switching for QScroll'd scrolling between Wheel and Movement based on the 
+        presence of scroll wheel support.
+    Added Scroll Wheel support to QScroll.
+    Improved compatibility when executing of some programs that have unusual command line 
+        string requirements.
+
 2022-08-21
 
     Reduced mouse flicker a little. (getting rid of it completely will require
